--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <!-- How To Section -->
     <section id="how-to" class="py-16 bg-teal-500 text-white">
         <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold text-center mb-8">✨ ¿Cómo adquirir los mejores productos PAMIL?  ✨</h2>
+            <h2 class="text-3xl font-bold text-center mb-8"> ¿Cómo adquirir los mejores productos PAMIL?  </h2>
             <p class="text-center mb-8 text-teal-100">El proceso más fácil y rápido para limpieza de primera</p>
             
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-4xl mx-auto">
@@ -413,3 +413,4 @@
     </script>
 </body>
 </html>
+
