--- a/index.html
+++ b/index.html
@@ -247,7 +247,38 @@
             </div>
         </div>
     </section>
+<!-- Beneficios Diferenciales Section -->
+    <section id="benefits" class="py-16 bg-gradient-to-b from-teal-50 to-white">
+        <div class="container mx-auto px-4">
+            <h2 class="text-3xl font-bold text-center mb-12 text-teal-600">¿Por qué elegir PAMIL?</h2>
+            
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-5xl mx-auto">
+                <div class="bg-white/80 backdrop-blur-sm p-6 rounded-lg shadow-md text-center" data-aos="fade-up">
+                    <div class="bg-teal-100 p-4 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-4">
+                        <i data-feather="shield" class="text-teal-600"></i>
+                    </div>
+                    <h3 class="text-xl font-semibold mb-2 text-teal-600">Fórmulas Seguras</h3>
+                    <p class="text-gray-700">Productos diseñados por ingenieras para cuidar tu piel, tu hogar y el medio ambiente.</p>
+                </div>
 
+                <div class="bg-white/80 backdrop-blur-sm p-6 rounded-lg shadow-md text-center" data-aos="fade-up" data-aos-delay="100">
+                    <div class="bg-teal-100 p-4 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-4">
+                        <i data-feather="star" class="text-teal-600"></i>
+                    </div>
+                    <h3 class="text-xl font-semibold mb-2 text-teal-600">Calidad Premium</h3>
+                    <p class="text-gray-700">Cada lote es elaborado con estándares profesionales y probado en nuestros propios hogares.</p>
+                </div>
+
+                <div class="bg-white/80 backdrop-blur-sm p-6 rounded-lg shadow-md text-center" data-aos="fade-up" data-aos-delay="200">
+                    <div class="bg-teal-100 p-4 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-4">
+                        <i data-feather="smile" class="text-teal-600"></i>
+                    </div>
+                    <h3 class="text-xl font-semibold mb-2 text-teal-600">Experiencia Cercana</h3>
+                    <p class="text-gray-700">Atención personalizada, pedidos fáciles por WhatsApp y entregas rápidas en Cochabamba.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- FAQ Section -->
     <section id="faq" class="py-16 bg-teal-100/10">
@@ -463,3 +494,4 @@
     </script>
 </body>
 </html>
+
