--- a/index.html
+++ b/index.html
@@ -192,6 +192,16 @@
                         </div>
                     </div>
                 </div>
+                <!-- Producto: Jabón líquido para ropa -->
+<div class="bg-white/80 backdrop-blur-sm p-6 rounded-lg shadow-md text-center hover:shadow-lg transition-shadow duration-300" data-aos="fade-up">
+    <img src="https://images.unsplash.com/photo-1581579188871-45ea61f2a0f0?auto=format&fit=crop&w=400&q=80" alt="Jabón líquido para ropa" class="w-32 h-32 object-contain mx-auto mb-4 rounded-lg shadow-sm">
+    <h3 class="text-xl font-semibold mb-2 text-teal-600">Jabón líquido para ropa</h3>
+    <p class="text-gray-700 mb-4">El aliado perfecto para mantener tu ropa limpia, fresca y con un aroma agradable, cuidando los tejidos.</p>
+    <a href="https://wa.me/591XXXXXXXXX?text=Hola%20quiero%20más%20información%20sobre%20el%20Jabón%20líquido%20para%20ropa" target="_blank" class="inline-block bg-teal-600 text-white px-4 py-2 rounded-lg hover:bg-teal-700 transition-colors">
+        Consultar
+    </a>
+</div>
+
             </div>
 
             <!-- Order Summary -->
@@ -494,4 +504,5 @@
     </script>
 </body>
 </html>
+
 
