--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                             <span class="text-xs">10 Bs +5L</span>
                         </div>
                     </div>
-                    <img src="https://huggingface.co/spaces/nicoyura/pamil/resolve/main/images/jabol%20ropa.jpg" alt="Jabón Líquido para Ropa" class="w-full h-48 object-cover">
+                    <img src="https://huggingface.co/spaces/nicoyurax/pamil/resolve/main/images/close-up-folded-clean-towels-with-softner.jpg" alt="Jabón Líquido para Ropa" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-2 text-teal-600">Jabón Líquido para Ropa</h3>
                         <p class="text-gray-600 mb-4">Elimina manchas difíciles y cuida tus prendas con su fórmula suave.</p>
