--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                             </div>
                             <span class="ml-2 text-gray-600">- María G.</span>
                         </div>
-                        <p class="text-gray-700">"Los productos son excelentes, especialmente el jabón para manos. ¡Deja un aroma delicioso y no reseca la piel!"</p>
+                        <p class="text-gray-700">"Los productos son excelentes especialmente el jabón para manos. Deja un aroma delicioso!"</p>
                     </div>
                     
                     <div class="bg-white p-6 rounded-lg shadow-md border border-gray-100">
@@ -403,7 +403,7 @@
                             </div>
                             <span class="ml-2 text-gray-600">- Carlos R.</span>
                         </div>
-                        <p class="text-gray-700">"Muy buen lavavajillas, quita toda la grasa. Solo espero que saquen más aromas pronto."</p>
+                        <p class="text-gray-700">"Muy bueno el lavavajillas excelente la espuma"</p>
                     </div>
                 </div>
             </div>
@@ -622,3 +622,4 @@
     </script>
 </body>
 </html>
+
