--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="container mx-auto px-4">
             <h2 class="text-3xl font-bold text-center mb-8"> ¿Cómo adquirir los mejores productos PAMIL? </h2>
             <p class="text-center mb-8 text-teal-100">El proceso más fácil y rápido para limpieza de primera</p>
-             <p class="text-center mb-8 text-teal-100">¡Sigue bajando!</p>
+             <p class="text-center font-bold mb-8 text-teal-100">¡Sigue bajando!</p>
             
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-4xl mx-auto">
                 <div class="bg-teal-100/30 p-6 rounded-lg backdrop-blur-sm text-center border border-teal-200/30" data-aos="fade-up">
@@ -623,6 +623,7 @@
     </script>
 </body>
 </html>
+
 
 
 
